adding todos on sections to be explained before data processing

--- a/project_arrhythmias.ipynb
+++ b/project_arrhythmias.ipynb
@@ -103,7 +103,17 @@
    "source": [
     "### 0.2. Patient cases\n",
     "\n",
+    "//TODO: explain how the patient cases are structured on the data file, how we extract them, how many cases we have, what we will consider as a case (demographic data + an ECG worth of data).\n",
+    "\n",
     "## 1. Our approach\n",
+    "\n",
+    "//TODO: explain system of models, Model A for dimensionality reduction of ECGs, merge this with the encoded demographic data, and then do a filtering step (remove either the SOO or the sub-region) so that we are left with a single target variable, and then train Model B and Model C for classification of the SOO and sub-regions respectively.\n",
+    "\n",
+    "//TODO: explain how we want to give basically all variability of the dataset to the classification model, but first preprocessing it to represent this same data in a much smaller dimensionality that corresponds to learned, interpretable features.\n",
+    "\n",
+    "//TODO: explain how we do transformations of the loaded dataset (dataframe) to clean it/reduce it, inspired by RDD's\n",
+    "\n",
+    "//TODO: explain what families and kinds of models we are considering for both the dimensionality reduction and the classification, as well as how we plan to use multiple model training and evaluation to find the best performing models for each task.\n",
     "\n",
     "## 2. Demographic data preprocessing\n",
     "\n",
