wip: labels almost finished (only pending edge cases)

--- a/project_arrhythmias.ipynb
+++ b/project_arrhythmias.ipynb
@@ -260,7 +260,7 @@
          "type": "unknown"
         }
        ],
-       "ref": "7c7238db-9637-4719-b233-ae3ca4dcf0bf",
+       "ref": "30106049-f397-4486-92f2-e550a93f31e6",
        "rows": [
         [
          "P186",
@@ -675,7 +675,7 @@
          "type": "unknown"
         }
        ],
-       "ref": "f13b2c0c-b40d-4f33-af8d-e79003728f1c",
+       "ref": "6f5ce6aa-34dd-47c8-95bd-49220a36bd72",
        "rows": [
         [
          "P186",
@@ -1051,7 +1051,7 @@
          "type": "float"
         }
        ],
-       "ref": "17761965-2112-45bf-9ba9-fe69f8112f8a",
+       "ref": "0de208f3-d2ca-4b69-8dd2-cbfadaecf9d9",
        "rows": [
         [
          "P186",
@@ -2433,7 +2433,7 @@
          "type": "float"
         }
        ],
-       "ref": "605a1d3c-844b-4c8a-a31b-09c919ddc3eb",
+       "ref": "3069e9dd-b265-4f12-ac53-b0ff9a8d2d16",
        "rows": [
         [
          "P186",
@@ -3840,7 +3840,7 @@
          "type": "float"
         }
        ],
-       "ref": "f62c3ce4-2231-4268-b982-ee39ff501aa7",
+       "ref": "2f582561-981b-404c-9bdf-10c7db22afe5",
        "rows": [
         [
          "P186",
@@ -5432,7 +5432,7 @@
          "type": "string"
         }
        ],
-       "ref": "e8199fd8-ffc0-4a33-acc5-bbe146cccffe",
+       "ref": "ba1edb60-e858-4dd5-8651-7380415986a6",
        "rows": [
         [
          "0",
@@ -6017,7 +6017,7 @@
          "type": "string"
         }
        ],
-       "ref": "7196579c-1514-46d6-affc-a955c105550a",
+       "ref": "3dfff5e7-6a35-4abd-9599-9d52198681e7",
        "rows": [
         [
          "0",
@@ -6571,8 +6571,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Subregions in sheet 1: {'RVOTSEPTUM', 'COMMISSURE', 'LCC', 'RVOTFREEWALL', 'SUMMIT', 'RCC', 'LVOTSUBVALVULAR'}\n",
-      "Subregions in sheet 2: {'RVOTSEPTUM', 'LVOTSUMMIT', 'LCC', 'RVOTFREEWALL', 'RCC', 'COMMISURE', 'LVOTSUBVALVULAR'}\n"
+      "Subregions in sheet 1: {'COMMISSURE', 'RVOTSEPTUM', 'SUMMIT', 'LVOTSUBVALVULAR', 'LCC', 'RCC', 'RVOTFREEWALL'}\n",
+      "Subregions in sheet 2: {'RVOTSEPTUM', 'COMMISURE', 'LVOTSUMMIT', 'LVOTSUBVALVULAR', 'LCC', 'RCC', 'RVOTFREEWALL'}\n"
      ]
     }
    ],
@@ -6720,11 +6720,11 @@
     }
    ],
    "source": [
-    "def standardize_outcome_b(df, sheet1):\n",
+    "def standardize_outcome_b(df, sheet1, source_col, target_col):\n",
     "    print(\"Starting standardization for Outcome_B using sheet1:\")\n",
     "    \n",
-    "    b_mapping = dict(zip(sheet1['SOO'], sheet1['SOO_Chamber']))\n",
-    "    df['Outcome_B'] = df['SOO'].map(b_mapping)\n",
+    "    b_mapping = dict(zip(sheet1[target_col], sheet1['SOO_Chamber']))\n",
+    "    df['Outcome_B'] = df[source_col].map(b_mapping)\n",
     "    \n",
     "    # Handle unmapped values from first mapping pass\n",
     "    unmapped_b = df['Outcome_B'].isna()\n",
@@ -6742,7 +6742,7 @@
     "    return df\n",
     "\n",
     "\n",
-    "data = standardize_outcome_b(data, labels_sheet1)"
+    "data = standardize_outcome_b(data, labels_sheet1, 'SOO', 'SOO')"
    ]
   },
   {
@@ -6766,11 +6766,11 @@
     }
    ],
    "source": [
-    "def standardize_outcome_c(df, sheet2):\n",
+    "def standardize_outcome_c(df, sheet2, source_col, target_col):\n",
     "    print(\"Starting standardization for Outcome_C using sheet2:\")\n",
     "    \n",
-    "    c_mapping = dict(zip(sheet2['SOO'], sheet2['Simplified']))\n",
-    "    df['Outcome_C'] = df['SOO'].map(c_mapping)\n",
+    "    c_mapping = dict(zip(sheet2[target_col], sheet2['Simplified']))\n",
+    "    df['Outcome_C'] = df[source_col].map(c_mapping)\n",
     "    \n",
     "    unmapped_c = df['Outcome_C'].isna()\n",
     "    unmapped_c_count = unmapped_c.sum()\n",
@@ -6787,7 +6787,7 @@
     "    return df\n",
     "\n",
     "\n",
-    "data = standardize_outcome_c(data, labels_sheet2)"
+    "data = standardize_outcome_c(data, labels_sheet2, 'SOO', 'SOO')"
    ]
   },
   {
@@ -6826,7 +6826,7 @@
          "type": "unknown"
         }
        ],
-       "ref": "fa58f634-e51d-4189-98bc-671649d4a692",
+       "ref": "da42c675-8f96-476e-951d-326779012765",
        "rows": [
         [
          "P186",
@@ -7404,10 +7404,150 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1ba2e0e3",
+   "id": "8ff90130",
    "metadata": {},
    "source": [
-    "This is why we will do a second mapping, this time from the 'SOO_region' column in the data to the 'Region_Simplified' column in the `.xlxs` file, to create a new column 'Outcome_C'."
+    "We see that after these two mappings and matchins, we still have some missing values in both 'Outcome_B' and 'Outcome_C'. This may be easily solvable by looking at the other column in the dataframe (the one that we haven't used to map the outcomes for each of the outcomes), and checking if we can find a match there."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "3231d85f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Unmapped Outcome B count: 78\n",
+      "                                              SOO       SOO_chamber\n",
+      "                               Unión mitroaórtica   Right ventricle\n",
+      "                         M. papilar posteromedial   Right ventricle\n",
+      "                              Fascicular anterior   Right ventricle\n",
+      "                         M. papilar posteromedial   Right ventricle\n",
+      "                               Inferoseptal basal   Right ventricle\n",
+      "                            Septo basal izquierdo   Right ventricle\n",
+      "                      Ostium del SC (crux cordis)    Coronary sinus\n",
+      "         Anillo tricuspídeo inferior/inferoseptal Tricuspid annulus\n",
+      "                             Fascicular posterior   Right ventricle\n",
+      "                               CS distal (summit)    Coronary sinus\n",
+      "                       Anillo tricuspídeo lateral Tricuspid annulus\n",
+      "                                        LV summit   Right ventricle\n",
+      "                         M. papilar posteromedial   Right ventricle\n",
+      "                         M. papilar anterolateral   Right ventricle\n",
+      "                               LV summit EPI (SC)    Coronary sinus\n",
+      "                               Unión mitroaórtica   Right ventricle\n",
+      "                            VI anteroseptal basal   Right ventricle\n",
+      "                               Unión mitroaórtica   Right ventricle\n",
+      "                         M. papilar anterolateral   Right ventricle\n",
+      "                            Papilar inferolateral   Right ventricle\n",
+      "                                           Summit    Left ventricle\n",
+      "                                           Summit   Right ventricle\n",
+      "                          Anillo mitral posterior    Mitral annulus\n",
+      "                                        LV summit   Right ventricle\n",
+      "                               Unión mitroaórtica   Right ventricle\n",
+      "                                        LV summit   Right ventricle\n",
+      "                                   LV perihisiana   Right ventricle\n",
+      "Left coronary cusp, desde el ventriculo izquierdo   Right ventricle\n",
+      "                         M. papilar posteromedial   Right ventricle\n",
+      "                                 Crux cordis (SC)    Coronary sinus\n",
+      "          Anillo mitral inferolateral + Unión M-A   Right ventricle\n",
+      "                               Unión mitroaórtica   Right ventricle\n",
+      "                              Fascicular anterior   Right ventricle\n",
+      "                        LV papilar postero-medial   Right ventricle\n",
+      "                         M. papilar anterolateral   Right ventricle\n",
+      "                      Anillo tricuspídeo anterior Tricuspid annulus\n",
+      "                           LV inferolateral basal   Right ventricle\n",
+      "                                        LV summit   Right ventricle\n",
+      "                         M. papilar anterolateral   Right ventricle\n",
+      "                            VI inferoseptal basal   Right ventricle\n",
+      "                            Septo basal subaótico   Right ventricle\n",
+      "                        Anillo tricuspídeo septal Tricuspid annulus\n",
+      "      Seno coronario, ramo IV anterior (foco epi)    Coronary sinus\n",
+      "                                  papilar lateral   Right ventricle\n",
+      "                                     Ostium de SC    Coronary sinus\n",
+      "                                        LV summit   Right ventricle\n",
+      "                        Anillo tricuspídeo septal Tricuspid annulus\n",
+      "                            VI anteroseptal basal   Right ventricle\n",
+      "           LV anteroseptal (foco intramiocárdico)   Right ventricle\n",
+      "                               Unión mitroaórtica   Right ventricle\n",
+      "                                  Intersenos (LV)   Right ventricle\n",
+      "                                        LV summit   Right ventricle\n",
+      "                      Ostium del SC (crux cordis)    Coronary sinus\n",
+      "                               Unión mitroaórtica   Right ventricle\n",
+      "                            LV inferoseptal medio   Right ventricle\n",
+      "                       Anillo tricuspídeo lateral Tricuspid annulus\n",
+      "                         M. papilar anterolateral   Right ventricle\n",
+      "                            fasciculo anterior LV   Right ventricle\n",
+      "                                       anillo lat    Mitral annulus\n",
+      "                               Fascículo anterior   Right ventricle\n",
+      "                               Unión mitroaórtica   Right ventricle\n",
+      "                     subvalvular aortico (summit)   Right ventricle\n",
+      "                            Papilar anterolateral   Right ventricle\n",
+      "                         M. papilar anterolateral   Right ventricle\n",
+      "                             Fascicular posterior   Right ventricle\n",
+      "                                Cúspide izquierda    Left ventricle\n",
+      "                    Musculo papilar infero-medial   Right ventricle\n",
+      "                         M. papilar posteromedial   Right ventricle\n",
+      "                                 Papilar inferior   Right ventricle\n",
+      "                            VI anteroseptal medio   Right ventricle\n",
+      "                                        LV summit   Right ventricle\n",
+      "                                           Summit    Left ventricle\n",
+      "                      Ostium del SC (crux cordis)    Coronary sinus\n",
+      "                       Anillo mitral anteroseptal    Mitral annulus\n",
+      "          Pared anterior-anteroseptal media (IAM)   Right ventricle\n",
+      "                                        LV summit   Right ventricle\n",
+      "                                   LV inferobasal   Right ventricle\n",
+      "                      Anillo mitral anterolateral    Mitral annulus\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Pick the SOO and SOO_chamber for all rows that do not have Outcome_B in a list\n",
+    "def get_unmapped_soos(df):\n",
+    "    unmapped = df[df['Outcome_B'].isna()][['SOO', 'SOO_chamber']]\n",
+    "    return unmapped\n",
+    "unmapped_soos = get_unmapped_soos(data)\n",
+    "print(f\"Unmapped Outcome B count: {len(unmapped_soos)}\")\n",
+    "print(unmapped_soos.to_string(index=False))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "3dcf8eab",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Unmapped Outcome C count: 3\n",
+      "                 SOO    SOO_chamber\n",
+      "                 NaN           RVOT\n",
+      "        Ostium de SC Coronary sinus\n",
+      "rvot sèeto posterior           RVOT\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Pick the SOO and SOO_chamber for all rows that do not have Outcome_C in a list\n",
+    "def get_unmapped_subregions(df):\n",
+    "    unmapped = df[df['Outcome_C'].isna()][['SOO', 'SOO_chamber']]\n",
+    "    return unmapped\n",
+    "unmapped_subregions = get_unmapped_subregions(data)\n",
+    "print(f\"\\nUnmapped Outcome C count: {len(unmapped_subregions)}\")\n",
+    "print(unmapped_subregions.to_string(index=False))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4dc3db1e",
+   "metadata": {},
+   "source": [
+    "We can add logic now to directly map these missing values to the appropiate label:"
    ]
   },
   {
