finished setting all outcomes

--- a/project_arrhythmias.ipynb
+++ b/project_arrhythmias.ipynb
@@ -260,7 +260,7 @@
          "type": "unknown"
         }
        ],
-       "ref": "30106049-f397-4486-92f2-e550a93f31e6",
+       "ref": "2e08012b-473a-4dd9-b1fa-1c889d901e87",
        "rows": [
         [
          "P186",
@@ -675,7 +675,7 @@
          "type": "unknown"
         }
        ],
-       "ref": "6f5ce6aa-34dd-47c8-95bd-49220a36bd72",
+       "ref": "996fe259-68d8-44dc-95fb-821f51cb8b90",
        "rows": [
         [
          "P186",
@@ -1051,7 +1051,7 @@
          "type": "float"
         }
        ],
-       "ref": "0de208f3-d2ca-4b69-8dd2-cbfadaecf9d9",
+       "ref": "c04f3580-4d52-4d54-b95a-aa6467e4d231",
        "rows": [
         [
          "P186",
@@ -2433,7 +2433,7 @@
          "type": "float"
         }
        ],
-       "ref": "3069e9dd-b265-4f12-ac53-b0ff9a8d2d16",
+       "ref": "2e433cdd-2697-4f88-b6e4-723bf23f0b77",
        "rows": [
         [
          "P186",
@@ -3840,7 +3840,7 @@
          "type": "float"
         }
        ],
-       "ref": "2f582561-981b-404c-9bdf-10c7db22afe5",
+       "ref": "ed21629b-f2e2-4a78-87db-d8f8475a0671",
        "rows": [
         [
          "P186",
@@ -5432,7 +5432,7 @@
          "type": "string"
         }
        ],
-       "ref": "ba1edb60-e858-4dd5-8651-7380415986a6",
+       "ref": "22e891c2-f701-44db-90a2-44438d57858e",
        "rows": [
         [
          "0",
@@ -6017,7 +6017,7 @@
          "type": "string"
         }
        ],
-       "ref": "3dfff5e7-6a35-4abd-9599-9d52198681e7",
+       "ref": "8b52167a-73f1-4b8b-a368-544167f27040",
        "rows": [
         [
          "0",
@@ -6571,8 +6571,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Subregions in sheet 1: {'COMMISSURE', 'RVOTSEPTUM', 'SUMMIT', 'LVOTSUBVALVULAR', 'LCC', 'RCC', 'RVOTFREEWALL'}\n",
-      "Subregions in sheet 2: {'RVOTSEPTUM', 'COMMISURE', 'LVOTSUMMIT', 'LVOTSUBVALVULAR', 'LCC', 'RCC', 'RVOTFREEWALL'}\n"
+      "Subregions in sheet 1: {'RCC', 'RVOTSEPTUM', 'COMMISSURE', 'RVOTFREEWALL', 'LCC', 'LVOTSUBVALVULAR', 'SUMMIT'}\n",
+      "Subregions in sheet 2: {'RCC', 'RVOTSEPTUM', 'COMMISURE', 'RVOTFREEWALL', 'LCC', 'LVOTSUBVALVULAR', 'LVOTSUMMIT'}\n"
      ]
     }
    ],
@@ -6826,7 +6826,7 @@
          "type": "unknown"
         }
        ],
-       "ref": "da42c675-8f96-476e-951d-326779012765",
+       "ref": "2d4450dd-f643-4057-8ee7-254368e8bbe9",
        "rows": [
         [
          "P186",
@@ -7412,7 +7412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 27,
    "id": "3231d85f",
    "metadata": {},
    "outputs": [
@@ -7420,86 +7420,68 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Unmapped Outcome B count: 78\n",
+      "Unmapped Outcome B count: 60\n",
       "                                              SOO       SOO_chamber\n",
       "                               Unión mitroaórtica   Right ventricle\n",
-      "                         M. papilar posteromedial   Right ventricle\n",
       "                              Fascicular anterior   Right ventricle\n",
-      "                         M. papilar posteromedial   Right ventricle\n",
       "                               Inferoseptal basal   Right ventricle\n",
       "                            Septo basal izquierdo   Right ventricle\n",
       "                      Ostium del SC (crux cordis)    Coronary sinus\n",
-      "         Anillo tricuspídeo inferior/inferoseptal Tricuspid annulus\n",
       "                             Fascicular posterior   Right ventricle\n",
       "                               CS distal (summit)    Coronary sinus\n",
-      "                       Anillo tricuspídeo lateral Tricuspid annulus\n",
-      "                                        LV summit   Right ventricle\n",
-      "                         M. papilar posteromedial   Right ventricle\n",
-      "                         M. papilar anterolateral   Right ventricle\n",
       "                               LV summit EPI (SC)    Coronary sinus\n",
       "                               Unión mitroaórtica   Right ventricle\n",
-      "                            VI anteroseptal basal   Right ventricle\n",
+      "                                 Banda moderadora              RVOT\n",
+      "                                              NaN              RVOT\n",
       "                               Unión mitroaórtica   Right ventricle\n",
-      "                         M. papilar anterolateral   Right ventricle\n",
+      "                               LVOT anterolateral              LVOT\n",
       "                            Papilar inferolateral   Right ventricle\n",
-      "                                           Summit    Left ventricle\n",
-      "                                           Summit   Right ventricle\n",
       "                          Anillo mitral posterior    Mitral annulus\n",
-      "                                        LV summit   Right ventricle\n",
       "                               Unión mitroaórtica   Right ventricle\n",
-      "                                        LV summit   Right ventricle\n",
       "                                   LV perihisiana   Right ventricle\n",
       "Left coronary cusp, desde el ventriculo izquierdo   Right ventricle\n",
-      "                         M. papilar posteromedial   Right ventricle\n",
       "                                 Crux cordis (SC)    Coronary sinus\n",
+      "                              rvot postero septal              RVOT\n",
       "          Anillo mitral inferolateral + Unión M-A   Right ventricle\n",
       "                               Unión mitroaórtica   Right ventricle\n",
       "                              Fascicular anterior   Right ventricle\n",
       "                        LV papilar postero-medial   Right ventricle\n",
-      "                         M. papilar anterolateral   Right ventricle\n",
       "                      Anillo tricuspídeo anterior Tricuspid annulus\n",
       "                           LV inferolateral basal   Right ventricle\n",
-      "                                        LV summit   Right ventricle\n",
-      "                         M. papilar anterolateral   Right ventricle\n",
       "                            VI inferoseptal basal   Right ventricle\n",
       "                            Septo basal subaótico   Right ventricle\n",
-      "                        Anillo tricuspídeo septal Tricuspid annulus\n",
       "      Seno coronario, ramo IV anterior (foco epi)    Coronary sinus\n",
       "                                  papilar lateral   Right ventricle\n",
       "                                     Ostium de SC    Coronary sinus\n",
-      "                                        LV summit   Right ventricle\n",
-      "                        Anillo tricuspídeo septal Tricuspid annulus\n",
-      "                            VI anteroseptal basal   Right ventricle\n",
+      "                                      Infundibulo              RVOT\n",
       "           LV anteroseptal (foco intramiocárdico)   Right ventricle\n",
       "                               Unión mitroaórtica   Right ventricle\n",
       "                                  Intersenos (LV)   Right ventricle\n",
-      "                                        LV summit   Right ventricle\n",
+      "                               rvot - pared libre              RVOT\n",
       "                      Ostium del SC (crux cordis)    Coronary sinus\n",
+      "                      Septal posterior y anterior              RVOT\n",
       "                               Unión mitroaórtica   Right ventricle\n",
       "                            LV inferoseptal medio   Right ventricle\n",
-      "                       Anillo tricuspídeo lateral Tricuspid annulus\n",
-      "                         M. papilar anterolateral   Right ventricle\n",
+      "                             rvot sèeto posterior              RVOT\n",
       "                            fasciculo anterior LV   Right ventricle\n",
       "                                       anillo lat    Mitral annulus\n",
       "                               Fascículo anterior   Right ventricle\n",
       "                               Unión mitroaórtica   Right ventricle\n",
       "                     subvalvular aortico (summit)   Right ventricle\n",
       "                            Papilar anterolateral   Right ventricle\n",
-      "                         M. papilar anterolateral   Right ventricle\n",
+      "                             rvot septal anterior              RVOT\n",
       "                             Fascicular posterior   Right ventricle\n",
       "                                Cúspide izquierda    Left ventricle\n",
       "                    Musculo papilar infero-medial   Right ventricle\n",
-      "                         M. papilar posteromedial   Right ventricle\n",
+      "      Septo posterior, immediatamente subvalvular              RVOT\n",
       "                                 Papilar inferior   Right ventricle\n",
       "                            VI anteroseptal medio   Right ventricle\n",
-      "                                        LV summit   Right ventricle\n",
-      "                                           Summit    Left ventricle\n",
       "                      Ostium del SC (crux cordis)    Coronary sinus\n",
+      "                    RVOT anteroseptal subvalvular              RVOT\n",
       "                       Anillo mitral anteroseptal    Mitral annulus\n",
+      "                                       Intersinus              LVOT\n",
       "          Pared anterior-anteroseptal media (IAM)   Right ventricle\n",
-      "                                        LV summit   Right ventricle\n",
-      "                                   LV inferobasal   Right ventricle\n",
-      "                      Anillo mitral anterolateral    Mitral annulus\n"
+      "                                   LV inferobasal   Right ventricle\n"
      ]
     }
    ],
@@ -7510,12 +7492,54 @@
     "    return unmapped\n",
     "unmapped_soos = get_unmapped_soos(data)\n",
     "print(f\"Unmapped Outcome B count: {len(unmapped_soos)}\")\n",
-    "print(unmapped_soos.to_string(index=False))"
+    "print(unmapped_soos.to_string(index=False))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 28,
+   "id": "23049ed9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Filled 60 missing Outcome_B values based on SOO_chamber\n",
+      "Remaining null Outcome_B values: 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "def map_missing_outcome_b(df):\n",
+    "    chamber_to_outcome = {\n",
+    "        \"Right ventricle\": \"RVOT\",\n",
+    "        \"Left ventricle\": \"LVOT\",\n",
+    "        \"RVOT\": \"RVOT\",\n",
+    "        \"LVOT\": \"LVOT\",\n",
+    "        \"Coronary sinus\": \"LVOT\",  # From sheet2 we can see that it corersponds to subregion \"LVOTSUMMIT\"\n",
+    "        \"Mitral annulus\": \"LVOT\",  # From sheet2 we can see that it corresponds to subregion \"LVOTSUBVALVULAR\"\n",
+    "        \"Tricuspid annulus\": \"RVOT\"  # From sheet2 we can see that it corresponds to subregion \"RVOTSEPTUM\"\n",
+    "    }\n",
+    "    \n",
+    "    mask = df['Outcome_B'].isna()\n",
+    "    to_fill = df.loc[mask, 'SOO_chamber'].isin(chamber_to_outcome.keys()).sum()\n",
+    "    \n",
+    "    # Apply mapping only to rows where Outcome_B is null\n",
+    "    for chamber, outcome in chamber_to_outcome.items():\n",
+    "        df.loc[(df['Outcome_B'].isna()) & (df['SOO_chamber'] == chamber), 'Outcome_B'] = outcome\n",
+    "    \n",
+    "    remaining_null = df['Outcome_B'].isna().sum()\n",
+    "    print(f\"Filled {to_fill} missing Outcome_B values based on SOO_chamber\")\n",
+    "    print(f\"Remaining null Outcome_B values: {remaining_null}\")\n",
+    "    return df\n",
+    "\n",
+    "data = map_missing_outcome_b(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
    "id": "3dcf8eab",
    "metadata": {},
    "outputs": [
@@ -7543,11 +7567,111 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "64a2ebde",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Filled 2 missing Outcome_C values:\n",
+      "- 1 from SOO_chamber mapping\n",
+      "- 1 from SOO mapping\n",
+      "Remaining null Outcome_C values: 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "def map_missing_outcome_c(df):\n",
+    "    chamber_to_outcome_from_soo_chamber = {\n",
+    "        \"Coronary sinus\": \"LVOTSUMMIT\"  # From sheet2 we can see that it corresponds to subregion \"LVOTSUMMIT\"\n",
+    "    }\n",
+    "    \n",
+    "    chamber_to_outcome_from_soo = {\n",
+    "        \"rvot sèeto posterior\": \"RVOTSEPTUM\"  # From sheet2 we can see that it corresponds to subregion \"RVOTSEPTUM\" \n",
+    "    }\n",
+    "    \n",
+    "    initial_missing = df['Outcome_C'].isna().sum()\n",
+    "    \n",
+    "    chamber_mapping_count = sum((df['Outcome_C'].isna()) & \n",
+    "                              (df['SOO_chamber'].isin(chamber_to_outcome_from_soo_chamber.keys())))\n",
+    "    \n",
+    "    for chamber, outcome in chamber_to_outcome_from_soo_chamber.items():\n",
+    "        df.loc[(df['Outcome_C'].isna()) & (df['SOO_chamber'] == chamber), 'Outcome_C'] = outcome\n",
+    "    \n",
+    "    soo_mapping_count = sum((df['Outcome_C'].isna()) & \n",
+    "                           (df['SOO'].isin(chamber_to_outcome_from_soo.keys())))\n",
+    "\n",
+    "    for soo, outcome in chamber_to_outcome_from_soo.items():\n",
+    "        df.loc[(df['Outcome_C'].isna()) & (df['SOO'] == soo), 'Outcome_C'] = outcome\n",
+    "    \n",
+    "    remaining_missing = df['Outcome_C'].isna().sum()\n",
+    "    filled_count = initial_missing - remaining_missing\n",
+    "    \n",
+    "    print(f\"Filled {filled_count} missing Outcome_C values:\")\n",
+    "    print(f\"- {chamber_mapping_count} from SOO_chamber mapping\")\n",
+    "    print(f\"- {soo_mapping_count} from SOO mapping\")\n",
+    "    print(f\"Remaining null Outcome_C values: {remaining_missing}\")\n",
+    "    return df\n",
+    "    \n",
+    "\n",
+    "data = map_missing_outcome_c(data)"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "4dc3db1e",
+   "id": "52e5bdb1",
    "metadata": {},
    "source": [
-    "We can add logic now to directly map these missing values to the appropiate label:"
+    "We can see that we still have 1 patient with a missing value in 'Outcome_C'. We know that this patient has a 'SOO_chamber' value of 'RVOT', and since our classification task for Model C is to classify the sub-regions of the LVOT, we can leave it with a NaN value, since we will filter it anyway before training Model C, and this outcome column is not needed neither for Model B."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "b014d940",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "=== Outcome_B (LVOT/RVOT) Distribution ===\n",
+      "Class distribution among mapped values:\n",
+      "- RVOT: 139 (73.2%)\n",
+      "- LVOT: 51 (26.8%)\n",
+      "Missing values: 0 (0.0%)\n",
+      "\n",
+      "=== Outcome_C (Specific Regions) Distribution ===\n",
+      "Class distribution among mapped values:\n",
+      "- RVOTSEPTUM: 60 (31.7%)\n",
+      "- RVOTFREEWALL: 48 (25.4%)\n",
+      "- LVOTSUBVALVULAR: 25 (13.2%)\n",
+      "- LVOTSUMMIT: 22 (11.6%)\n",
+      "- COMMISURE: 13 (6.9%)\n",
+      "- LCC: 12 (6.3%)\n",
+      "- RCC: 9 (4.8%)\n",
+      "Missing values: 1 (0.5%)\n",
+      "\n",
+      "=== Summary ===\n",
+      "Total records: 190\n",
+      "Usable for Model B (SOO classification): 190 (100.0%)\n",
+      "Usable for Model C (Region classification): 189 (99.5%)\n"
+     ]
+    }
+   ],
+   "source": [
+    "analyze_outcomes(data)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "476d1bc8",
+   "metadata": {},
+   "source": [
+    "Up until here we have basic demographic data preprocessing (for height, weight, BMI) and the creation of the two outcome columns for Model B and Model C, which we will use later to train the classification models. We will now focus onto cleaning and preparing all the other demographic data columns."
    ]
   },
   {
